--- a/index.html
+++ b/index.html
@@ -92,25 +92,28 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">About Me</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Hello! I'm Jonathan Wang, a software engineer currently working at Veeva Systems on the Veeva Vault team. 
+              I graduated from NYU in 2019 with a Bachelor's in Computer Science, and am interested in backend 
+              engineering and web development; on the side, I am also a professional musician. Enjoy your stay, and if you're
+              interested in collaborating, let's connect!
             </p>
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">GitHub</a></h4>
+              <p class="description">Track my personal, professional, and academic CS projects.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">LinkedIn</a></h4>
+              <p class="description">Connect with me professionally on LinkedIn.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">YouTube</a></h4>
+              <p class="description">Listen to my music on YouTube.</p>
             </div>
 
           </div>
