Added education and images to portfolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
         <h1><a href="#menu-active">Jonathan</a></h1>
       </div>
 
@@ -43,9 +42,9 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#services">Education</a></li>
+          <li><a href="#team">Work Experience</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -63,7 +62,6 @@
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -131,6 +129,7 @@
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Education</h3>
+          <br>
         </div>
       
         <div class="row about-container">
@@ -140,20 +139,20 @@
             <div class="col-lg-8 content order-lg-1 order-2">
 
               <div class="icon-box wow fadeInUp">
-                  <div class="icon"><i class="fa fa-file-text"></i></div>
-                  <h4 class="title"><a href="" target="_blank">New York University</a></h4>
-                  <p class="description">Class of 2019</p>
-                </div>
+                  <h1>New York University</h1>
+                  <h2>Class of 2019</h2>
+              </div>
   
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-                <div class="icon"><i class="fa fa-github"></i></div>
-                <h4 class="title"><a href="https://github.com/jwanggggg" target="_blank">B.A. in Computer Science, Minor in Economics</a></h4>
-                <p class="description">Cumulative GPA: 3.40/4.00</p>
+                <h4>Major: Bachelor of Arts in Computer Science</h4>
+                <h4>Minor: Economics</h4>
+                <h4>Cumulative GPA: 3.40/4.00</h4>
               </div>
   
               <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-                <div class="icon"><i class="fa fa-linkedin"></i></div>
-                <h4 class="title"><a href="https://www.linkedin.com/in/jonathan-wang-78b021127/" target="_blank">Relevant Coursework</a></h4>
+                <h5>Relevant Coursework: Data Structures, Basic Algorithms,
+                  Operating Systems, Open Source, Agile Development, Natural Language Processing, iOS Programming
+                </h5>
               </div>
   
             </div>
@@ -163,54 +162,51 @@
       </div>
     </section><!-- #facts -->
 
-    <!--==========================
-      Services Section
+     <!--==========================
+      Team Section
     ============================-->
-    <section id="services">
-      <div class="container wow fadeIn">
-        <div class="section-header">
-          <h3 class="section-title">Work Experience</h3>
-          <p class="section-description"></p>
+    <section id="team">
+        <div class="container wow fadeInUp">
+          <div class="section-header">
+            <h3 class="section-title">Work Experience</h3>
+            <p class="section-description"></p>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/veevalogo.png" alt=""></div>
+                <h4>Veeva Systems</h4>
+                <span>Associate Software Engineer</span>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/nyucourant.png" alt=""></div>
+                <h4>New York University</h4>
+                <span>Computer Science Tutor</span>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/amnhBox.jpg" alt=""></div>
+                <h4>American Museum of Natural History</h4>
+                <span>Software Engineer Intern</span>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/icbc.png" alt=""></div>
+                <h4>Industrial and Commercial Bank of China</h4>
+                <span>Software Developer Intern</span>
+              </div>
+            </div>
+          </div>
+  
         </div>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
-              <h4 class="title"><a href="">Veeva Systems</a></h4>
-              <p class="description">Associate Software Engineer</p>
-              <p class="description">July 2019 - Present</p>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
-              <h4 class="title"><a href="">New York University</a></h4>
-              <p class="description">Computer Science Tutor</p>
-              <p class="description">August 2018 - January 2019</p>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>
-              <h4 class="title"><a href="">American Museum of Natural History</a></h4>
-              <p class="description">Software Engineer Intern</p>
-              <p class="description">June 2018 - August 2018</p>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>
-              <h4 class="title"><a href="">ICBC</a></h4>
-              <p class="description">Software Developer Intern</p>
-              <p class="description">June 2017 - August 2017</p>
-            </div>
-          </div>
-         
-        </div>
-
-      </div>
-    </section><!-- #services -->
+      </section><!-- #team -->
 
     <!--==========================
       Portfolio Section
@@ -236,9 +232,9 @@
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <a href="">
-              <img src="img/portfolio/app1.jpg" alt="">
+              <img src="img/portfolio/trex2.jpg" alt="">
               <div class="details">
-                <h4>Mythic Creatures</h4>
+                <h4>The Ultimate Predator</h4>
                 <span>Motion Detecting and Depth Sensing</span>
               </div>
             </a>
@@ -246,7 +242,7 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <a href="">
-              <img src="img/portfolio/app3.jpg" alt="">
+              <img src="img/portfolio/amnhJob.jpg" alt="">
               <div class="details">
                 <h4>Unseen Oceans</h4>
                 <span>Language Translations via Unity</span>
@@ -266,7 +262,7 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <a href="">
-              <img src="img/portfolio/card2.jpg" alt="">
+              <img src="img/portfolio/yelpLogo.png" alt="">
               <div class="details">
                 <h4>Yelp Dataset Challenge</h4>
                 <span>Analyzing restauarant reviews on Yelp</span>
@@ -276,17 +272,17 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <a href="">
-              <img src="img/portfolio/card3.jpg" alt="">
+              <img src="img/portfolio/welcome_background.jpg" alt="">
               <div class="details">
                 <h4>Instrument Exchange</h4>
-                <span>Web platform for exchanging instruments</span>
+                <span>Web platform for trading instruments</span>
               </div>
             </a>
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
-              <img src="img/portfolio/logo1.jpg" alt="">
+              <img src="img/portfolio/brackets.png" alt="">
               <div class="details">
                 <h4>Two-Pass Linker</h4>
                 <span>A linker for object files</span>
@@ -296,7 +292,7 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
-              <img src="img/portfolio/logo3.jpg" alt="">
+              <img src="img/portfolio/deadlock.jpg" alt="">
               <div class="details">
                 <h4>Banker's Algorithm</h4>
                 <span>Deadlock detection algorithm</span>
@@ -306,7 +302,7 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
-              <img src="img/portfolio/logo2.jpg" alt="">
+              <img src="img/portfolio/newsInChunks.png" alt="">
               <div class="details">
                 <h4>News in Chunks</h4>
                 <span>A Clean iOS News App</span>
@@ -327,85 +323,16 @@
           <div class="row">
             <div class="col-lg-9 text-center text-lg-left">
               <h3 class="cta-title">Music</h3>
-              <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="cta-text">Outside of development, my greatest passion is music.</p>
             </div>
             <div class="col-lg-3 cta-btn-container text-center">
-              <a class="cta-btn align-middle" href="#">Call To Action</a>
+              <a class="cta-btn align-middle" href="#">View</a>
             </div>
           </div>
   
         </div>
       </section><!-- #call-to-action -->
 
-    <!--==========================
-      Team Section
-    ============================-->
-    <section id="team">
-      <div class="container wow fadeInUp">
-        <div class="section-header">
-          <h3 class="section-title">Team</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-              <h4>Amanda Jepson</h4>
-              <span>Accountant</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- #team -->
   </main>
 
   <!--==========================
@@ -420,16 +347,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Regna</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong>Jonathan Wang</strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- #footer -->
