Cleaned up image proportions on modals

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section><!-- #facts -->
 
      <!--==========================
-      Team Section
+      Work Section
     ============================-->
     <section id="team">
         <div class="container wow fadeInUp">
@@ -343,7 +343,7 @@
             </button>
           </div>
           <div class="modal-body">
-                <img src="img/veeva.jpg" style="width:100%">
+                <img src="img/veeva.jpg" id="modalImage">
 
                 <h4>Associate Software Engineer</h4>
                 <h5>Vault Object Framework Team</h5>
@@ -384,7 +384,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <img src="img/courantbanner.jpeg" class="img-responsive" style="width:100%;">
+              <img src="img/courantbanner.jpeg" class="img-responsive" id="modalImage">
               <h4>Computer Science Tutor</h4>
               <h5>CS101 - Object Oriented Programming</h5>
               <h5>August 2018 - January 2019</h5>
@@ -417,7 +417,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <img src="img/amnhJob.jpg" class="img-responsive" style="width:100%">
+              <img src="img/amnhJob.jpg" class="img-responsive" id="modalImage">
               <p>The American Museum of Natural History features interactive exhibits
                 that allow museum-goers to interact with technology such as animations and
                 video games.</p>
@@ -425,6 +425,9 @@
                 <p>As an intern, I worked on the museum's latest interactive exhibits, The
                 Ultimate Predator and Unseen Oceans. I used Java, Processing and Unity to
                 create motion depth-sensing software for humans to interact with animals.</p>
+
+                <p><a href="https://www.youtube.com/watch?v=cxaibw-ei7M">See the work that I 
+                  did on the exhibit here.</a></p>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
             </div>
@@ -445,14 +448,14 @@
               </button>
             </div>
             <div class="modal-body">
-              <img src="img/icbcBuilding.jpg" class="img-responsive" style="width:75%">
+              <img src="img/icbcBuilding.jpg" class="img-responsive" id="modalImage">
                 <p>In the summer of my sophomore year, I worked as an Information
-                Technology Intern at ICBC New York. There, I refurbished the company
+                Technology Intern at ICBC New York. There, I updated the company
                 website using HTML/CSS and JavaScript and also implemented a
                 searchable employee directory using BootStrap.</p>
 
                 <p>Employees at ICBC are required to fill out daily financial reports.
-                To assist them, I created Python scripts that automatically download,
+                To assist them, I created Python scripts to automatically download,
                 organize, and complete these forms for them.</p>
             </div>
             <div class="modal-footer">
