--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
             </div>
             <div class="modal-body">
               <img src="img/courantbanner.jpeg" class="img-responsive" id="modalImage">
+
               <h4>Computer Science Tutor</h4>
               <h5>CS101 - Object Oriented Programming</h5>
               <h5>August 2018 - January 2019</h5>
@@ -418,6 +419,10 @@
             </div>
             <div class="modal-body">
               <img src="img/amnhJob.jpg" class="img-responsive" id="modalImage">
+
+              <h4>Software Engineer Intern</h4>
+              <h5>Exhibitions Team</h5>
+              <h5>June 2018 - August 2018</h5>
               <p>The American Museum of Natural History features interactive exhibits
                 that allow museum-goers to interact with technology such as animations and
                 video games.</p>
@@ -426,7 +431,7 @@
                 Ultimate Predator and Unseen Oceans. I used Java, Processing and Unity to
                 create motion depth-sensing software for humans to interact with animals.</p>
 
-                <p><a href="https://www.youtube.com/watch?v=cxaibw-ei7M">See the work that I 
+                <p><a href="https://www.youtube.com/watch?v=cxaibw-ei7M">See the work that I
                   did on the exhibit here.</a></p>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -449,6 +454,9 @@
             </div>
             <div class="modal-body">
               <img src="img/icbcBuilding.jpg" class="img-responsive" id="modalImage">
+
+                <h4>Software Developer Intern</h4>
+                <h5>July 2017 - August 2017</h5>
                 <p>In the summer of my sophomore year, I worked as an Information
                 Technology Intern at ICBC New York. There, I updated the company
                 website using HTML/CSS and JavaScript and also implemented a
