Updated Veeva modal for job description

--- a/index.html
+++ b/index.html
@@ -355,13 +355,11 @@
                   <br></br>
                   I currently work on the Vault Object Framework team, which
                   designs the essential classes used by every other team in
-                  Vault. So far, I have helped design:
+                  Vault. So far, I have worked on the following:
                   <ul>
-                    <li>Formula (regular expression) field parsing for objects</li>
-                    <li>Public and secure record querying for objects within the
-                    database</li>
-                    <li>Re-implementations of legacy code that have increased
-                    querying operation speeds by up to 50%</li>
+                    <li>Enabling validation rules through regular expression parsing for objects</li>
+                    <li>Redesigning the summary class of objects used within Vault to increase querying speed</li>
+                    <li>Implementing relationships between objects to enable asynchronous interactions</li>
                   </ul>
                 </p>
           </div>
