Update description and headers

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#services">Education</a></li>
+          <li><a href="#education">Education</a></li>
           <li><a href="#team">Work Experience</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
         </ul>
@@ -61,7 +61,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Jonathan Wang</h1>
-      <h2>Software Engineer based in California and NYC.</h2>
+      <h2>Software Engineer based in New York City.</h2>
       <a href="#about" class="btn-get-started">About Me</a>
     </div>
   </section><!-- #hero -->
@@ -78,8 +78,8 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">About Me</h2>
             <p>
-              Hello! I'm Jonathan Wang, a software engineer currently working at Veeva Systems on the Vault team.
-              I graduated from NYU in 2019 with a Bachelor's in Computer Science, and am interested in backend
+              Hello! I'm Jonathan, a software engineer currently working at Veeva Systems on the Vault team in NYC.
+              I graduated from NYU in 2019 with a Bachelor's in Computer Science, and specialize in backend
               engineering and web development; on the side, I am also a professional musician. Enjoy your stay, and if you're
               interested in collaborating, let's connect!
             </p>
@@ -164,7 +164,7 @@
               <div class="member">
                 <div class="pic"><img src="img/veevalogo.png" data-toggle="modal" data-target="#VeevaModal"></div>
                 <h4>Veeva Systems</h4>
-                <span>Associate Software Engineer</span>
+                <span>Software Engineer</span>
                 <span>July 2019 - Present</span>
               </div>
             </div>
@@ -632,7 +632,7 @@
                   <p>Objects in Veeva's Vault platform implement lifecycles, which allow for useful operations
                     such as tracking the state of a patient's prescription or drug's development.
                     <br></br>
-                    I implemented the ability for objects to reference lifecycles and track/update their states 
+                    I implemented the ability for objects to reference lifecycles and track/update their states
                     (e.g. Active, Needs Restocking, Completed) asynchronously, allowing multiple objects to track
                     the status of one another.
                   </p>
