master: Changed education header, changed email

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!--==========================
       Education Section
     ============================-->
-    <section id="facts">
+    <section id="education">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Education</h3>
@@ -148,7 +148,7 @@
 
           </div>
       </div>
-    </section><!-- #facts -->
+    </section><!-- #education -->
 
      <!--==========================
       Work Section
@@ -299,7 +299,7 @@
           <div class="row">
             <div class="col-lg-9 text-center text-lg-left">
               <h3 class="cta-title">Contact Me</h3>
-              <p class="cta-text">Email: jw4107@nyu.edu</p>
+              <p class="cta-text">Email: jonathan.wang4107@gmail.com</p>
               <p class="cta-text">Phone: 551-795-5735</p>
             </div>
             <div class="col-lg-3 cta-btn-container text-center">
