master: Update resume

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <img src="img/portfolio/yelpLogo.png" data-toggle="modal" data-target="#YelpModal">
             <div class="details">
               <h4>Yelp Dataset Challenge</h4>
@@ -269,23 +269,6 @@
               <span>Asynchronous object interaction</span>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <img src="img/portfolio/deadlock.jpg" data-toggle="modal" data-target="#BankersModal">
-            <div class="details">
-              <h4>Banker's Algorithm</h4>
-              <span>Deadlock detection algorithm</span>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <img src="img/portfolio/newsInChunks.png" data-toggle="modal" data-target="#NewsModal">
-            <div class="details">
-              <h4>News in Chunks</h4>
-              <span>A Clean iOS News App</span>
-            </div>
-          </div>
-
         </div>
 
       </div>
@@ -347,7 +330,7 @@
                 <img src="img/veeva.jpg" id="modalImage">
 
                 <h4>Associate Software Engineer</h4>
-                <h5>Vault Object Framework Team</h5>
+                <h5>Vault Object Framework</h5>
                 <h5>July 2019 - Present</h5>
                 <p>Veeva is a cloud-computing company specializing in developing
                   pharmaceutical and life science applications, and Vault is the
@@ -356,11 +339,11 @@
                   <br></br>
                   I currently work on the Vault Object Framework team, which
                   designs the essential classes used by every other team in
-                  Vault. So far, I have worked on the following:
+                  Vault. Some of my work includes:
                   <ul>
-                    <li>Enabling validation rules through regular expression parsing for objects</li>
-                    <li>Redesigning the summary class of objects used within Vault to increase querying speed</li>
-                    <li>Implementing relationships between objects to enable asynchronous interactions</li>
+                    <li>Creating upsert (update/insert) APIs for updating/creating metadata objects through Java/MySQL</li>
+                    <li>Implementing Rich Text design within our web platform, enabling advanced features like text headers, highlighting, and strikethroughs</li>
+                    <li>Refactoring object design to utilize lazy loading, increasing querying speed by 40%</li>
                   </ul>
                 </p>
           </div>
@@ -644,60 +627,6 @@
           </div>
         </div>
         <!-- End LC/State Modal -->
-
-      <!-- Bankers Modal -->
-      <div class="modal fade" id="BankersModal" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-lg text-center" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="BankersLabel">Banker's Algorithm</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <img src="img/portfolio/card2.jpg" class="img-responsive" style="width:75%">
-                  <p>My implementation of Banker's Algorithm, an algorithm that prevents deadlocks
-                    in an operating system.
-                  </p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End Bankers Modal -->
-
-      <!-- News Modal -->
-      <div class="modal fade" id="NewsModal" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-lg text-center" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="NewsLabel">News in Chunks</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <img src="img/portfolio/newsInChunksScreen1.png" class="img-responsive" style="height:15%">
-                  <p>News in Chunks is an iOS app created in Swift that brings a streamlined take on news;
-                    rather than browsing through clunky menus or UIs, the user sets their preferences then
-                    the app collects articles in chunks for the user to scroll through and read.
-                  </p>
-
-                  <p>
-                    I implemented the backend logic of the app, including scraping from news sources,
-                    the data structures behind holding the articles, and the UITableViewControllers.
-                  </p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End News Modal -->
 
 
   </section>
